tool/tests/snapshots/dotnet_target__method_taking_str@MyStruct.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class MyStruct: IDisposable
{
    private unsafe Raw.MyStruct* _inner;

    /// <summary>
    /// Creates a managed <c>MyStruct</c> from a raw handle.
    /// </summary>
    /// <remarks>
    /// Safety: you should not build two managed objects using the same raw handle (may causes use-after-free and double-free).
    /// <br/>
    /// This constructor assumes the raw struct is allocated on Rust side.
    /// If implemented, the custom Drop implementation on Rust side WILL run on destruction.
    /// </remarks>
    public unsafe MyStruct(Raw.MyStruct* handle)
    {
        _inner = handle;
    }

    /// <returns>
    /// A <c>MyStruct</c> allocated on Rust side.
    /// </returns>
    public static MyStruct NewStr(string v)
    {
        unsafe
        {
            byte[] vBuf = DiplomatUtils.StringToUtf8(v);
            nuint vBufLength = (nuint)vBuf.Length;
            fixed (byte* vBufPtr = vBuf)
            {
                Raw.MyStruct* retVal = Raw.MyStruct.NewStr(vBufPtr, vBufLength);
                return new MyStruct(retVal);
            }
        }
    }

    public void SetStr(string newStr)
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyStruct");
            }
            byte[] newStrBuf = DiplomatUtils.StringToUtf8(newStr);
            nuint newStrBufLength = (nuint)newStrBuf.Length;
            fixed (byte* newStrBufPtr = newStrBuf)
            {
                Raw.MyStruct.SetStr(_inner, newStrBufPtr, newStrBufLength);
            }
        }
    }

    /// <summary>
    /// Returns the underlying raw handle.
    /// </summary>
    public unsafe Raw.MyStruct* AsFFI()
    {
        return _inner;
    }

    /// <summary>
    /// Destroys the underlying object immediately.
    /// </summary>
    public void Dispose()
    {
        unsafe
        {
            if (_inner == null)
            {
                return;
            }

            Raw.MyStruct.Destroy(_inner);
            _inner = null;

            GC.SuppressFinalize(this);
        }
    }

    ~MyStruct()
    {
        Dispose();
    }
}

