tool/tests/snapshots/dotnet_target__method_taking_str@RawMyStruct.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct MyStruct
{
    private const string NativeLib = "rust";

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_new_str", ExactSpelling = true)]
    public static unsafe extern MyStruct* NewStr(byte* v, nuint vSz);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_set_str", ExactSpelling = true)]
    public static unsafe extern void SetStr(MyStruct* self, byte* newStr, nuint newStrSz);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_destroy", ExactSpelling = true)]
    public static unsafe extern void Destroy(MyStruct* self);
}

