tool/tests/snapshots/dotnet_target__method_write_out@MyStruct.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class MyStruct: IDisposable
{
    private unsafe Raw.MyStruct* _inner;

    /// <summary>
    /// Creates a managed <c>MyStruct</c> from a raw handle.
    /// </summary>
    /// <remarks>
    /// Safety: you should not build two managed objects using the same raw handle (may causes use-after-free and double-free).
    /// <br/>
    /// This constructor assumes the raw struct is allocated on Rust side.
    /// If implemented, the custom Drop implementation on Rust side WILL run on destruction.
    /// </remarks>
    public unsafe MyStruct(Raw.MyStruct* handle)
    {
        _inner = handle;
    }

    public void Write(DiplomatWrite out)
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyStruct");
            }
            Raw.MyStruct.Write(_inner, &out);
        }
    }

    public string Write()
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyStruct");
            }
            DiplomatWrite write = new DiplomatWrite();
            Raw.MyStruct.Write(_inner, &write);
            string retVal = write.ToUnicode();
            write.Dispose();
            return retVal;
        }
    }

    public void WriteUnit(DiplomatWrite out)
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyStruct");
            }
            Raw.MyStruct.WriteUnit(_inner, &out);
        }
    }

    public string WriteUnit()
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyStruct");
            }
            DiplomatWrite write = new DiplomatWrite();
            Raw.MyStruct.WriteUnit(_inner, &write);
            string retVal = write.ToUnicode();
            write.Dispose();
            return retVal;
        }
    }

    /// <exception cref="ByteException"></exception>
    public void WriteResult(DiplomatWrite out)
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyStruct");
            }
            Raw.FfiResultVoidU8 result = Raw.MyStruct.WriteResult(_inner, &out);
            if (!result.isOk)
            {
                throw new ByteException(result.Err);
            }
        }
    }

    /// <exception cref="ByteException"></exception>
    public string WriteResult()
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyStruct");
            }
            DiplomatWrite write = new DiplomatWrite();
            Raw.FfiResultVoidU8 result = Raw.MyStruct.WriteResult(_inner, &write);
            if (!result.isOk)
            {
                throw new ByteException(result.Err);
            }
            string retVal = write.ToUnicode();
            write.Dispose();
            return retVal;
        }
    }

    public byte WriteNoRearrange(DiplomatWrite out)
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyStruct");
            }
            byte retVal = Raw.MyStruct.WriteNoRearrange(_inner, &out);
            return retVal;
        }
    }

    /// <summary>
    /// Returns the underlying raw handle.
    /// </summary>
    public unsafe Raw.MyStruct* AsFFI()
    {
        return _inner;
    }

    /// <summary>
    /// Destroys the underlying object immediately.
    /// </summary>
    public void Dispose()
    {
        unsafe
        {
            if (_inner == null)
            {
                return;
            }

            Raw.MyStruct.Destroy(_inner);
            _inner = null;

            GC.SuppressFinalize(this);
        }
    }

    ~MyStruct()
    {
        Dispose();
    }
}
